--- a/About us.html
+++ b/About us.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Metadata and viewport settings -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -9,13 +10,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.header {
+.header { /* Reset body margin, set default font size and font family */
   background-color: #f1f1f1;
   padding: 30px;
   text-align: center;
 }
 
-#navbar {
+#navbar { /*  Sticky top navbar with links and hover/active effects */
   position: sticky;
   top: 0;
   overflow: hidden;
@@ -41,7 +42,7 @@ body {
   background-color: #04AA6D;
   color: white;
 }
-.content {
+.content { /*Main content area including images and text padding*/
   padding: 16px;
 }
 
@@ -59,15 +60,17 @@ p {
 </head>
 <body>
 <div class="header"></div>
-
+<!--navigation bar section Contains links to different pages-->
 <div id="navbar">
   <a class="active" href="redesine.html">Home</a>
   <a href="OurSerivce.html">Our services</a>
   <a href="About us.html">About Us</a>
   <a href="Contact.html">Contact Us</a>
 </div>
+<!--Includes a logo image and About Us text-->
 <div class="content">
 <img src="https://img1.wsimg.com/isteam/ip/2b6510c5-0d30-4dc6-8061-a9571f0bb37b/logo/ff38d70c-fbbc-4444-956e-439910f17d3d.png/:/rs=w:967,h:250,cg:true,m/cr=w:967,h:250/qt=q:95" alt="Clash Royale game image" width="400" height="120"/>
+ <!-- About Us Text -->
 <h4>About Us
 Located in the heart of Old Newmarket, Lemon Lime Interior Design has worked closely with clients in the GTA, Newmarket, Aurora and the Muskokas for over 15 years. We have happy clients who have transformed their condominiums, lofts, houses, cottages and commercial spaces with our fresh approach to design.
 
